k8s/30-client.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client
  namespace: mern
spec:
  replicas: 1
  selector:
    matchLabels: { app: client }
  template:
    metadata:
      labels: { app: client }
    spec:
      containers:
        - name: client
          image: mern-social-client:latest
          imagePullPolicy: IfNotPresent
          ports: [{containerPort: 80}]
---
apiVersion: v1
kind: Service
metadata:
  name: client
  namespace: mern
spec:
  selector: { app: client }
  ports:
    - port: 80
      targetPort: 80
  type: ClusterIP
