k8s/40-mongo-express.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo-express
  namespace: mern
spec:
  replicas: 1
  selector:
    matchLabels: { app: mongo-express }
  template:
    metadata:
      labels: { app: mongo-express }
    spec:
      containers:
        - name: mongo-express
          image: mongo-express:1.0.2
          ports: [{containerPort: 8081}]
---
apiVersion: v1
kind: Service
metadata:
  name: mongo-express
  namespace: mern
spec:
  selector: { app: mongo-express }
  ports:
    - port: 8081
      targetPort: 8081
  type: ClusterIP
