k8s/90-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mern-ingress
  namespace: mern
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: server
                port:
                  number: 4000
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: server
                port:
                  number: 4000
          - path: /db
            pathType: Prefix
            backend:
              service:
                name: mongo-express
                port:
                  number: 8081
